gui/php/cakephp/webroot/css/lms.css
.config-button {
	float: left;
	width: 12em;

	margin-right: 1em;
	margin-bottom: 1em;
}

.config-button .panel-body {
	text-align: center;
}

.config-button span {
	font-size: 8em;
}

.config-button span.half {
	font-size: 4em;
	margin-top: 0.5em;
	margin-bottom: 0.5em;
}

.glyphicon {
	font-size: 1.5em;
}

.panel nav li .btn {
	margin-right: 0.5em;
}

.panel nav li:last-child .btn {
	margin-right: 0em;
}

.panel table tr th.actions,
.panel table tr td.actions {
	width: 3em;
}

.panel nav ul.nav.navbar-nav {
	float: left;
}

.panel nav ul.nav.navbar-nav.navbar-right {
	float: right;
}

.picture {
	max-height: 30em;
}

.pictureselect {
	padding-top: 1em;
	padding-left: 1em;
	max-height: 18em;
	overflow-y: scroll;
}

.pictureselect input {
	display: none;
}

.pictureselect input + label {
	margin-right: 1.5em;
	margin-bottom: 1em;
}

.pictureselect input + label {
	border-radius: 1em;
}

.pictureselect input:checked + label img{
	box-shadow: 0 0 1em #f0ad4e;
}

.pictureselect input + label img.checked {
	box-shadow: 0 0 1em #66afe9;
}

.pictureselect .pictureselector {
	max-width: 12em;
	max-height: 8em;
}

.questionelement .questionimageblock {
	max-width: 40%;
}

.questionelement .answerimage {
	/* max-width: 4em; */
	/* max-height: 4em; */
}

.questionanswerelement > div {
	margin-bottom: 1em;
}

